# hyroxtrainer

./: .env.example  .gitignore  app.py  hello.py  pyproject.toml  requirements.txt  setup.sh
.streamlit/: config.toml
src/: __init__.py
src/components/: __init__.py  coaching.py  daily_workout.py  progress_dashboard.py  workout_input.py  workout_tracker.py
src/database/: __init__.py  connection.py  schema.sql
src/services/: __init__.py  llm_service.py
