[project]
name = "hyroxtrainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.18.0",
    "google-generativeai>=0.8.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.29.0",
    "supabase>=2.0.0",
]
